Newest folders and file updates

--- a/skills-work-sample-seo.html
+++ b/skills-work-sample-seo.html
@@ -31,7 +31,7 @@
                     <a href="" class="cta">Mastering Digital Marketing: SEM SEO Social Media and Beyond - LBS</a>
                     <a href="" class="cta">Digital Marketing - Google Digital Garage</a><br>
                 </div>
-                <img src="./images/Skills/seoscore.png" width="100%" alt="SEO score of 90.6%">
+                <!-- <img src="./images/Skills/seoscore.png" width="100%" alt="SEO score of 90.6%"> -->
             </div>
             <div class="seo-words grid-item"><p class="para1">As a web professional, I focus on enhancing website performance and user experience through my expertise in SEO audits, strategy, best practices, and performance monitoring.
                 <br><br>
