--- a/skills-work-sample-ux.html
+++ b/skills-work-sample-ux.html
@@ -26,7 +26,9 @@
     </header>
     <main class="main">
         <div class="grid-contain">
-            <div class="seo-screenshot grid-item"><img src="./images/Skills/qascore.png" width="100%" alt="QA score of 95%"></div>
+            <div class="seo-screenshot grid-item">
+                <img src="./images/Skills/qascore.png" width="100%" alt="QA score of 95%">
+            </div>
             <div class="seo-words grid-item"><p class="para1">My expertise lies in creating exceptional user-friendly and optimised websites, that prioritise user experience and optimisation; delivering a seamless and enjoyable journey for visitors.
                 <br><br>
                 I am experienced in creating and enhancing website structures and layouts, to display easy-to-use navigations, optimise user flow, and ensure a visually appealing interface.
