Latest file and folder updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
             <div class="headerText">
-                <h1 class="h1">Lizette Henry</h1>
+                <h1 class="h1 h1Skills">Lizette Henry</h1>
                 <h2 class="h2">Digital Specialist</h2>
                 <hr>
                 <!-- <p class="para1">A computing graduate and website management professional, with experience as a Digital Producer, Web and Social Media Coordinator and Web Editor.</p>
@@ -177,8 +177,7 @@
             </section>
             <section class="contact grid-item" id="contact">
                 <h3 class="h3">Contact</h3>
-                <p class="para1">To learn more about my skills and experiences, or to contact me regarding collaborating on a digial project, you can find me on <a href="" class="inlineLink" target="_blank">LinkedIn</a>, below.
-                    <br>My CV can be sent on request.</p>
+                <p class="para1 leftText">To learn more about my skills and experiences, or to contact me regarding collaborating on a digial project, you can find me on <a href="" class="inlineLink" target="_blank">LinkedIn</a>, below. My CV can be sent on request.</p>
             </section>
         </main>
         <footer class="footer">
