Update navigation for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <i class="fa fa-bars mobile-toggle blackMenu"></i>
                 <ul class="mobile-nav">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#h2">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#certs">Certifications</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
@@ -22,7 +22,7 @@
             </nav>
             <div class="headerText">
                 <h1 class="h1 h1Skills">Lizette Henry</h1>
-                <h2 class="h2">Digital Specialist</h2>
+                <h2 class="h2" id="h2">Digital Specialist</h2>
                 <hr>
                 <!-- <p class="para1">A computing graduate and website management professional, with experience as a Digital Producer, Web and Social Media Coordinator and Web Editor.</p>
                 <a href="#certs" class="cta">Certifications</a> -->
