--- a/skills-work-sample-css.html
+++ b/skills-work-sample-css.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <i class="fa fa-bars mobile-toggle whiteMenu"></i>
+            <i class="fa fa-bars mobile-toggle whiteMenu blackBgMenu"></i>
             <ul class="mobile-nav">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./index.html#about">About</a></li>
